Fix slack channel form button overlap (#730)

--- a/assets/css/components/_interest.scss
+++ b/assets/css/components/_interest.scss
@@ -8,10 +8,6 @@
   }
 }
 
-.remove-slack-channel {
-  @include position(absolute, null 0 0 null);
-}
-
 .interest-list-item {
   h3 {
     margin: 0;
